# CameraNoiseNet

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/dev/k504/cameraenginendk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CameraWrapper.cpp  CameraWrapper.h  imageProccesing.cpp  imageProccesing.h  imageReader.cpp  imageReader.h  jni_connect.cpp
app/src/main/java/dev/k504/cameraenginendk/: MainActivity.kt
app/src/main/res/drawable/: ic_camera.xml  ic_queation.xml  ic_refrash.xml  roundbutton.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/dev/k504/cameraenginendk/: ExampleUnitTest.kt
